2001-04-20  Clint Adams  <schizo@debian.org>

	* 14053: Src/Modules/termcap.c, Src/Modules/termcap.mdd:
	add ${termcap} special parameter in the style of ${terminfo}.

2001-04-19  Bart Schaefer  <schaefer@zsh.org>

	* 14008, 14051: Src/lex.c, Src/math.c, Src/params.c,
	Test/D06subscript.ztst: Improve parsing of subscripts so that
	many forms that failed before, work now, particularly for assoc
	array keys; create a test suite.

	* 14008: Src/hist.c: Don't getsparam("HISTFILE") until it is
	actually needed, because other parameter expansions reset the
	history mechanism for subscript parsing.

	* 14008: Src/builtin.c: Keep track of the new Param created when
	typeset_single() calls setsparam() in some circumstances; drop a
	redundant isident() test.

2001-04-19  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 14046: Doc/Zle/zle.yo, Src/Zle/zle_keymap.c: bindkey -rp removes
	bindings with given prefix; minor bugfix for length of prefix with
	bindkey -p.  Also, don't bind cursor keystrings if they are just
	a single key.

2001-04-19  Clint Adams  <schizo@debian.org>

	* unposted: configure.in: make sure all the libraries are
	in for the function check.

	* 14041: configure.in, Config/defs.mk.in, Src/Makefile.in,
	Src/Modules/cap.mdd, Src/Modules/termcap.mdd,
	Src/Modules/terminfo.mdd, Src/Modules/zftp.mdd:
	only link modules against needed libraries.

	* 14039: configure.in, Config/defs.mk.in, Src/zsh.mdd,
	Src/Modules/cap.mdd, Src/Modules/termcap.mdd,
	Src/Modules/terminfo.mdd, Src/Modules/zftp.mdd:
	simulate old linking behavior.

	* 14033: acconfig.h, aczsh.m4, configure.in, Config/defs.mk.in,
	Src/Makefile.in, Src/mkmakemod.sh, Src/zsh.mdd,
	Src/Modules/cap.mdd, Src/Modules/termcap.mdd,
	Src/Modules/terminfo.mdd: only link modules and main binary
	against needed libraries.

2001-04-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 14028: Src/Zle/complete.mdd: use the right path patterns for
	completion functions

2001-04-19  Clint Adams  <schizo@debian.org>
